[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "faker_cron"
author = "Nima Namjouyan"
author-email = "nimanamjouyan@gmail.com"
home-page = "https://github.com/ohmycaptainnemo/faker_cron.git"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov", "tox"]